# Highlightcutter-Retrainable

./: .gitignore  main.py  pyproject.toml  test_dataset.py  test_frame_extractor.py
app/core/: pipeline.py  pipeline_controller.py
app/cutter/: highlight_cutter_pointbased.py
app/dataset/: dataset_manager.py  game_config.py  sample_metadata.py
app/extractor/: frame_extractor.py
app/gui/: highlight_cutter_gui.py
app/pseudo_label/: auto_annotator.py
app/review/: review_window.py
app/training/: active_learning.py  trainer.py
config/: games.json  games.py
